...
        disableCollideAction = false
        didCollideOnce = false
        
        self.containerView.alpha = 0.2
        
        let alertController = UIAlertController.init(
            title: "Welcome to Word Blocks!",
            message: """
            You will see a word, and a word in another language will start falling
            
            💥 Answer before they collide 💥
            
            Tap ✅ if words mean the same
...
            ---------------------------------
            
            👊 Go beat that High Score!
            """,
            preferredStyle: .alert);
        
        let action = UIAlertAction(title: "🏁 Start Playing 🏁",
                                   style: .default,
                                   handler: {(alert: UIAlertAction!) in Manager.updateTurn(action: .tapStart)})
        
        alertController.addAction(action)
        
        self.present(alertController, animated: true, completion: {
...
